tests/error/type_errors/not_subscriptable.err
Error: Not subscriptable (at $FILE:9:4)
  | 
7 | @guppy(module)
8 | def foo(x: int) -> None:
9 |     x[0]
  |     ^ Expression of type `int` is not subscriptable

Guppy compilation failed due to 1 previous error
